Desktop/terraform/modules/security/main.tf
resource "aws_security_group" "alb" {
  name   = "${var.name}-alb-sg"
  vpc_id = var.vpc_id

  ingress { from_port=80  to_port=80  protocol="tcp" cidr_blocks=var.alb_ingress_cidrs description="HTTP" }
  ingress { from_port=443 to_port=443 protocol="tcp" cidr_blocks=var.alb_ingress_cidrs description="HTTPS" }

  egress { from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"] }
  tags = { Name = "${var.name}-alb-sg" }
}

resource "aws_security_group" "ecs" {
  name   = "${var.name}-ecs-sg"
  vpc_id = var.vpc_id

  egress { from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"] }
  tags = { Name = "${var.name}-ecs-sg" }
}

resource "aws_security_group_rule" "ecs_from_alb" {
  for_each = { for p in var.ecs_from_alb_ports : tostring(p) => p }

  type                     = "ingress"
  from_port                = each.value
  to_port                  = each.value
  protocol                 = "tcp"
  security_group_id        = aws_security_group.ecs.id
  source_security_group_id = aws_security_group.alb.id
  description              = "ALB to ECS ${each.value}"
}

resource "aws_security_group" "db" {
  name   = "${var.name}-db-sg"
  vpc_id = var.vpc_id

  egress { from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"] }
  tags = { Name = "${var.name}-db-sg" }
}

resource "aws_security_group_rule" "db_from_ecs" {
  type                     = "ingress"
  from_port                = var.db_port
  to_port                  = var.db_port
  protocol                 = "tcp"
  security_group_id        = aws_security_group.db.id
  source_security_group_id = aws_security_group.ecs.id
  description              = "ECS to DB"
}
